--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,20 +6,12 @@
 #spring.jpa.show-sql=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 server:
   port: 8080
 
 spring:
-  # tao database trong ten la shopdb tren mysql,thay doi username, pass
   datasource:
-    url: jdbc:mysql://localhost:3306/shopdb
-    username: root
-    password: nam123
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  # lam tuong tu voi cai nay nhe, hien tai dang loi, nma vx run duoc
-  second-datasource:
-    url: jdbc:mysql://localhost:3306/user_registration
+    url: jdbc:mysql://mysqldb:3306/shopdb
     username: root
     password: nam123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,28 +20,5 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
-  security:
-    oauth2:
-      client:
-        registration:
-          api-client-oidc:
-            provider: spring
-            client-id: api-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
-            scope: openid
-            client-name: api-client-oidc
-          api-client-authorization-code:
-            provider: spring
-            client-id: api-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/authorized"
-            scope: api.read
-            client-name: api-client-authorization-code
-        provider:
-          spring:
-            issuer-uri: http://auth-server:9000
 
 
