--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,28 @@
-#spring.application.name=never_give_up
-#spring.datasource.url=jdbc:mysql://localhost:3306/user_registration
-#spring.datasource.username=root
-#spring.datasource.password=nam123
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server:
-  port: 8080
 
 spring:
+  application:
+    name: tech_shop
   datasource:
-    url: jdbc:mysql://mysqldb:3306/shopdb
+    url: jdbc:mysql://localhost:3306/shopdb
     username: root
     password: nam123
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: true
     hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQLDialect
+     ddl-auto: update
+    show-sql: true
+    generate-ddl: true
+#for docker deployment
+
+#spring:
+#  datasource:
+#    url: jdbc:mysql://mysqldb:3306/shopdb
+#    username: root
+#    password: nam123
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    generate-ddl: true
+server:
+  port: 8080
 
 
